--- a/index.html
+++ b/index.html
@@ -78,11 +78,19 @@
     <div class="thead"><h2>ميزاتنا</h2></div>
      
     <div class="advan">
-           <div class="box">
-             <p>نحن في <bdi>TBike</bdi> نقدم لكم أفضل خدمات تأجير الدراجات النارية بتميز واحترافية، </p>
+           <div class="box" id="box1">
+             <p>نحن في <bdi>TBike</bdi> نقدم لكم أفضل خدمات تأجير الدراجات النارية بتميز واحترافية </p>
+           </div>
+           <div class="box" id="box2">
+             <p>أسطولنا في <bdi>TBike</bdi> يضم أحدث الدراجات النارية المصممة لتوفير تجربة قيادة ممتعة وآمنة لجميع عملائنا</p>
+           </div>
+           <div class="box" id="box3">
+            <p>استمتع بخيارات تأجيرنا المرنة في <bdi>TBike</bdi> من ست ساعات الى اثنتا عشرة ساعة إلى يوم كامل او اكثر نحن هنا لتلبية احتياجاتك بأسطولنا المتميز من الدراجات النارية</p>
            </div>
     </div>
   </div>
+  
+
   
 
   
