--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
              <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
              <p class="BikeTitle">TVS Apache RTR 160 4V</p>
              <div class="buttonContainer">
-              <button>حجز</button>
+              <button>إحجز</button>
              </div>
            </div>
            <div class="BBike" id="Bike3">
