--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
     </div>
   </div>
 
-  
+  <div class="rent">
+    <h1>تصفح اسطولنا المميز واختار اللي يناسبك</h1>
+  </div>
 
   <div class="after"></div>
 
