--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
 
   <div class="rent">
     <h1>تصفح اسطولنا المميز واختار اللي يناسبك</h1>
+
+    <div class="Bikes">
+      
+    </div>
   </div>
 
   <div class="after"></div>
