--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
             <img src="img/Bikes/scrambler-400-right-side-view-6.webp" alt="">
             <p class="BikeTitle">Triumph Scrambler 400 X</p>
             <div class="buttonContainer">
-             <a href="#" >إحجز</a>
+             <a href="#" >حجز</a>
             </div>
            </div>
            <div class="BBike" id="Bike2">
              <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
              <p class="BikeTitle">TVS Apache RTR 160 4V</p>
              <div class="buttonContainer">
-              <a href="#">إحجز</a>
+              <a href="#">حجز</a>
              </div>
            </div>
            <div class="BBike" id="Bike3">
             <img src="img/Bikes/raider-125-right-side-view-20.webp" alt="">
             <p class="BikeTitle">TVS Raider 125</p>
             <div class="buttonContainer">
-             <a href="#">إحجز</a>
+             <a href="#">حجز</a>
             </div>
            </div>
     </div>
@@ -128,34 +128,264 @@
          <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
          <h1>TVS Apache RTR 160 4V</h1>
          <div class="btn-container">
-          <a href="#">إحجز</a>
+          <a href="#">حجز</a>
          </div>
       </div>
 
+
+      <div class="Bike">
+         <img src="img/Bikes/scrambler-400-right-side-view-6.webp" alt="">
+         <h1>Triumph Scrambler 400 X</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/raider-125-right-side-view-20.webp" alt="">
+         <h1>TVS Raider 125</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/mt-15-right-side-view-3.webp" alt="">
+         <h1>Yamaha MT 15 V2</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/sp160-right-side-view-9.webp" alt="">
+         <h1>Honda SP160</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/g-310-gs-right-side-view.webp" alt="">
+         <h1>BMW G 310 GS</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/duke-250-right-side-view-2.webp" alt="">
+         <h1>KTM 250 Duke</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
       
       <div class="Bike">
+         <img src="img/Bikes/kawasaki-select-model-mirror-coated-matte-spark-black-1676442407791.webp" alt="">
+         <h1>Kawasaki Ninja H2R</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+      <div class="Bike">
          <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
          <h1>TVS Apache RTR 160 4V</h1>
          <div class="btn-container">
-          <a href="#">إحجز</a>
+          <a href="#">حجز</a>
          </div>
       </div>
 
 
       <div class="Bike">
-         <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
-         <h1>TVS Apache RTR 160 4V</h1>
+         <img src="img/Bikes/scrambler-400-right-side-view-6.webp" alt="">
+         <h1>Triumph Scrambler 400 X</h1>
          <div class="btn-container">
-          <a href="#">إحجز</a>
+          <a href="#">حجز</a>
          </div>
       </div>
 
 
       <div class="Bike">
+         <img src="img/Bikes/raider-125-right-side-view-20.webp" alt="">
+         <h1>TVS Raider 125</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/mt-15-right-side-view-3.webp" alt="">
+         <h1>Yamaha MT 15 V2</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/sp160-right-side-view-9.webp" alt="">
+         <h1>Honda SP160</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/g-310-gs-right-side-view.webp" alt="">
+         <h1>BMW G 310 GS</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/duke-250-right-side-view-2.webp" alt="">
+         <h1>KTM 250 Duke</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/kawasaki-select-model-mirror-coated-matte-spark-black-1676442407791.webp" alt="">
+         <h1>Kawasaki Ninja H2R</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+      <div class="Bike">
          <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
          <h1>TVS Apache RTR 160 4V</h1>
          <div class="btn-container">
-          <a href="#">إحجز</a>
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/scrambler-400-right-side-view-6.webp" alt="">
+         <h1>Triumph Scrambler 400 X</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/raider-125-right-side-view-20.webp" alt="">
+         <h1>TVS Raider 125</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/mt-15-right-side-view-3.webp" alt="">
+         <h1>Yamaha MT 15 V2</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/sp160-right-side-view-9.webp" alt="">
+         <h1>Honda SP160</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/g-310-gs-right-side-view.webp" alt="">
+         <h1>BMW G 310 GS</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/duke-250-right-side-view-2.webp" alt="">
+         <h1>KTM 250 Duke</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/kawasaki-select-model-mirror-coated-matte-spark-black-1676442407791.webp" alt="">
+         <h1>Kawasaki Ninja H2R</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+      <div class="Bike">
+         <img src="img/Bikes/apache-rtr-160-4v-right-side-view-8.webp" alt="">
+         <h1>TVS Apache RTR 160 4V</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/scrambler-400-right-side-view-6.webp" alt="">
+         <h1>Triumph Scrambler 400 X</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/raider-125-right-side-view-20.webp" alt="">
+         <h1>TVS Raider 125</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+
+      <div class="Bike">
+         <img src="img/Bikes/mt-15-right-side-view-3.webp" alt="">
+         <h1>Yamaha MT 15 V2</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/sp160-right-side-view-9.webp" alt="">
+         <h1>Honda SP160</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/g-310-gs-right-side-view.webp" alt="">
+         <h1>BMW G 310 GS</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/duke-250-right-side-view-2.webp" alt="">
+         <h1>KTM 250 Duke</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
+         </div>
+      </div>
+
+      <div class="Bike">
+         <img src="img/Bikes/kawasaki-select-model-mirror-coated-matte-spark-black-1676442407791.webp" alt="">
+         <h1>Kawasaki Ninja H2R</h1>
+         <div class="btn-container">
+          <a href="#">حجز</a>
          </div>
       </div>
       
@@ -172,7 +402,7 @@
 
   </div>
 
-  <div class="after"></div>
+  
 
 </body>
 </html>
