--- a/index.html
+++ b/index.html
@@ -355,7 +355,11 @@
             <li><a href="#" class="">تواصل معنا</a></li>
          </ul>
       </div>
-      <h1>TBike</h1>
+      <div class="end">
+         <h1><a href="index.html">TBike</a></h1> 
+          <p>© All rights are reserved to TBike</p> 
+      </div>
+      
    </div>
 
 
